# AppManager

./: .gitignore  ARCHITECTURE-3.md  ARCHITECTURE.md  README.md  meson.build  meson_options.txt
.github/: copilot-instructions.md
.github/workflows/: package.yml  package.yml.backup
data/: app-manager.desktop.in  app-manager.metainfo.xml  com.github.AppManager.gschema.xml  com.github.AppManager.metainfo.xml  gschemas.compiled  meson.build  org.github.AppManager.gschema.xml
data/resources/: app-manager.gresource.xml
data/resources/ui/: main-window-shortcuts.ui
docs/: ARCHITECTURE.md
extensions/: meson.build  nautilus_extension.vala
extensions/vapi/: libnautilus-extension-4.vapi
meson/: post_install.sh
po/: LINGUAS  README.md  nl.po  vi.po
scripts/: fetch-7z-tools.sh  fetch-dwarfs-tools.sh  fetch-zsync-tools.sh  make-anyimage.sh  make-appimage.sh  mass-install.sh  mass-uninstall.sh
src/: application.vala  main.vala  meson.build
src/core/: app_constants.vala  app_image_assets.vala  app_image_metadata.vala  app_paths.vala  background_update_service.vala  build_info.vala.in  desktop_entry.vala  directory_monitor.vala  i18n.vala  installation_record.vala  installation_registry.vala  installer.vala  update_sources.vala  updater.vala
src/utils/: file_utils.vala  ui_utils.vala
src/windows/: details_window.vala  dialog_window.vala  drop_window.vala  main_window.vala  preferences_window.vala
